<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/NotificationsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="34dp"
        android:text="@string/text_notifications"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alarmSwitch" />

    <Switch
        android:id="@+id/alarmSwitch"
        android:layout_width="360dp"
        android:layout_height="30dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:switchMinWidth="65dp"
        android:text="@string/enable_text"
        android:textSize="@dimen/textElements"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/soundNotifications"
        android:layout_width="360dp"
        android:layout_height="30dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="18dp"
        android:switchMinWidth="65dp"
        android:text="@string/sound_notification_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NotificationsTextView" />

    <Switch
        android:id="@+id/telegramNotifications"
        android:layout_width="360dp"
        android:layout_height="30dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:switchMinWidth="65dp"
        android:text="@string/telegram_notification_text"
        android:textSize="@dimen/textElements"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/soundNotifications" />

    <Button
        android:id="@+id/showLocationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="60dp"
        android:text="@string/show_locations_text"
        android:textSize="@dimen/textElements"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterDayTextView" />

    <TextView
        android:id="@+id/filterDayTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="34dp"
        android:text="@string/text_filter_day"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/telegramNotifications" />

    <Button
        android:id="@+id/reload_button"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="38dp"
        android:layout_height="35dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@android:color/transparent"
        android:insetLeft="-10dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:icon="@mipmap/reload_button_foreground"
        app:iconPadding="1dp"
        app:iconSize="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterDayTextView" />

    <TextView
        android:id="@+id/updatedCalendarText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="TextView"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/reload_button"
        app:layout_constraintTop_toBottomOf="@+id/filterDayTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>